# aca-builtin-auth-iac-sample

./: .gitignore  README.md  azure.yaml  pyproject.toml
infra/: bicepconfig.json  main.bicep  main.parameters.json  resources.bicep
infra/modules/security/: appauthconfig.bicep  appregistration.bicep
scripts/: delete_app.py  pyproject.toml  requirements.txt
src/api/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
src/frontend/: next.config.js  package-lock.json  package.json  staticwebapp.config.json  swa-cli.config.json
src/frontend/app/: AppInsightsProvider.tsx  AuthProvider.tsx  globals.css  layout.tsx  page.tsx
src/frontend/app/services/: applicationInsights.ts
