[project]
name = "api"
version = "0.1.0"
description = "FastAPI app for Azure OpenAI chat"
requires-python = ">=3.13"

dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.34.0",
    "openai==1.72.0",
    "setuptools>=70",
    "opentelemetry-api>=1.24,<2",
    "opentelemetry-sdk>=1.24,<2",
    "opentelemetry-instrumentation>=0.46,<1",
    "opentelemetry-instrumentation-httpx>=0.46,<1",
    "opentelemetry-instrumentation-openai>=0.46,<0.47",
    "opentelemetry-instrumentation-fastapi>=0.46,<1",
    "python-dotenv==1.1.0",
    "azure-identity==1.21.0",
    "azure-monitor-opentelemetry==1.5.0",
    "pydantic==2.11.3",
    "anyio==4.9.0",
    "asgiref==3.8.1",
    "azure-core==1.33.0",
    "azure-core-tracing-opentelemetry==1.0.0b12",
    "azure-monitor-opentelemetry-exporter==1.0.0b27",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "opentelemetry-semantic-conventions>=0.46,<1",
    "opentelemetry-semantic-conventions-ai>=0.4,<1",
    "starlette==0.49.1",
]

[tool.uv]
# Keep a local virtual environment in the project directory when syncing locally
default-groups = []

[project.optional-dependencies]
dev = ["ruff>=0.6.3,<1"]
